<resources>
    <string name="app_name">Eventos</string>
    <string name="add_event">Registro de Eventos</string>
    <string name="event_name">Nombre</string>
    <string name="event_description">Descripción</string>
    <string name="event_address">Dirección</string>
    <string name="event_price">Precio</string>
    <string name="event_date">Fecha</string>
    <string name="event_capacity">Aforo</string>
    <string name="user_image">Usuario</string>
    <string name="change_language">Cambiar Idioma</string>
    <string name="save">Guardar</string>
    <string name="close">Cerrar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="complete_all_fields">Por favor complete todos los campos</string>
    <string name="invalid_price_capacity">Precio y aforo deben ser números válidos</string>
    <string name="event_saved">Evento guardado exitosamente</string>
    <string name="event_saved_error">Error al guardar el evento</string>
    <string name="go_back">Volver</string>
</resources>
